Add .gitignore, etc.

--- a/configure.ac
+++ b/configure.ac
@@ -8,7 +8,7 @@ dnl
 
 AC_PREREQ([2.63])
 AC_INIT([sctools], [1.0], [http://github.com/thentenaar/sctools])
-AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_MACRO_DIRS([m4])
 AC_CONFIG_AUX_DIR([.])
 AM_INIT_AUTOMAKE([foreign])
 LT_INIT
